sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:8: error: value =! is not a member of Int
		while(getValeur(j - 1) > v && j =! 0){
                                                ^AlgInsertionSort:9: error: not found: value valeur
			setValeur(j, valeur);
                                     ^