sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
	for(i <- 1 to getNombreValeurs() - 1){
		var v: Int = getValeur(i);
		var last: Int = 0;
		var aEcrit: Boolean = false;
		var j: Int = i;
		while(getValeur(j - 1) > v && j =! 0){
			setValeur(j, valeur);
			last = j - 1;
			aEcrit = true;
			}
		setValeur(last, v);
	}
}
